--- a/src/dmdb/NewArtist.fxml
+++ b/src/dmdb/NewArtist.fxml
@@ -8,49 +8,78 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane prefHeight="440.0" prefWidth="470.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane prefHeight="546.0" prefWidth="605.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints maxHeight="209.23883056640625" minHeight="10.0" prefHeight="189.2203369140625" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="89.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="219.0" minHeight="10.0" prefHeight="219.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="250.0" minHeight="10.0" prefHeight="56.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="306.0" minHeight="10.0" prefHeight="280.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="205.0" minHeight="0.0" prefHeight="52.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="308.0" minHeight="10.0" prefHeight="207.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <HBox prefHeight="100.0" prefWidth="200.0">
+      <GridPane GridPane.rowIndex="1">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="267.0" minWidth="10.0" prefWidth="242.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="465.0" minWidth="10.0" prefWidth="334.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="412.0" minWidth="10.0" prefWidth="31.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
             <AnchorPane prefHeight="173.0" prefWidth="229.0">
                <children>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="147.0" layoutY="12.0" stroke="BLACK" strokeType="INSIDE" width="218.0" />
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="248.0" layoutX="9.0" layoutY="11.0" stroke="BLACK" strokeType="INSIDE" width="218.0" />
                   <Label layoutX="65.0" layoutY="79.0" text="Drop the photo" />
                </children>
             </AnchorPane>
-            <VBox>
+            <GridPane prefHeight="218.0" prefWidth="285.0" GridPane.columnIndex="1">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
-                  <TextField promptText="First Name" />
-                  <TextField promptText="Last Name" />
-                  <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Breif Description" />
-                  <DatePicker prefHeight="26.0" prefWidth="207.0" promptText="Birth Date" />
+                  <TextField prefHeight="22.0" prefWidth="333.0" promptText="First Name" />
+                  <TextField promptText="Last Name" GridPane.rowIndex="1" />
+                  <DatePicker prefHeight="26.0" prefWidth="237.0" promptText="Birth Date" GridPane.rowIndex="3" />
+                  <TextArea prefHeight="115.0" prefWidth="348.0" promptText="Breif Description" GridPane.rowIndex="2" />
                </children>
-            </VBox>
+            </GridPane>
          </children>
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-      </HBox>
-      <ListView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
-      <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+      </GridPane>
+      <ListView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" />
+      <GridPane GridPane.rowIndex="2">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="10.0" prefWidth="16.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="10.0" prefWidth="59.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="371.0" minWidth="10.0" prefWidth="265.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="217.0" minWidth="10.0" prefWidth="217.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.0" minWidth="10.0" prefWidth="67.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
-            <Label prefHeight="25.0" prefWidth="57.0" text=" Movies">
+            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="66.0" text="Delete" GridPane.columnIndex="4" />
+            <Label prefHeight="25.0" prefWidth="57.0" text="Movies" GridPane.columnIndex="1">
                <opaqueInsets>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </opaqueInsets>
             </Label>
-            <TextField prefHeight="26.0" prefWidth="259.0" promptText="Add more movies where he participated." />
-            <Separator prefHeight="0.0" prefWidth="90.0" />
-            <Button mnemonicParsing="false" text="delete" />
+            <TextField prefHeight="26.0" prefWidth="298.0" promptText="Add more movies where he participated." GridPane.columnIndex="2" />
          </children>
-      </HBox>
+      </GridPane>
+      <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="52.0" prefWidth="605.0">
+        <items>
+          <Button disable="true" mnemonicParsing="false" prefHeight="26.0" prefWidth="56.0" text="Edit" GridPane.columnIndex="1" />
+        </items>
+      </ToolBar>
    </children>
 </GridPane>
