One main-thread for SQL.

--- a/src/dmdb/Views/MainView_1.fxml
+++ b/src/dmdb/Views/MainView_1.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="mainPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dmdb.Controllers.MainViewController">
+<StackPane fx:id="mainPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dmdb.MainViewController">
    <children>
-      <BorderPane fx:id="searchBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="692.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane fx:id="searchBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="586.0" prefWidth="692.0">
          <top>
             <ToolBar prefHeight="30.0" prefWidth="692.0" BorderPane.alignment="CENTER">
               <items>
@@ -59,4 +59,4 @@
          </bottom>
       </BorderPane>
    </children>
-</AnchorPane>
+</StackPane>
