--- a/src/dmdb/Controllers/NewTitle.fxml
+++ b/src/dmdb/Controllers/NewTitle.fxml
@@ -27,18 +27,18 @@
          <center>
             <VBox prefHeight="420.0" prefWidth="533.0">
                <children>
-                  <HBox layoutY="32.0" GridPane.rowIndex="1">
+                  <HBox layoutY="32.0" prefHeight="259.0" prefWidth="619.0" GridPane.rowIndex="1">
                      <children>
-                        <AnchorPane prefHeight="173.0" prefWidth="229.0">
+                        <AnchorPane prefHeight="233.0" prefWidth="230.0">
                            <children>
-                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="281.0" layoutY="7.0" stroke="BLACK" strokeType="INSIDE" width="230.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="252.0" layoutY="7.0" stroke="BLACK" strokeType="INSIDE" width="230.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                               <Label layoutX="65.0" layoutY="79.0" text="Drop the photo" />
                            </children>
                            <HBox.margin>
                               <Insets bottom="5.0" left="5.0" top="5.0" />
                            </HBox.margin>
                         </AnchorPane>
-                        <VBox GridPane.columnIndex="1">
+                        <VBox prefHeight="241.0" prefWidth="384.0" GridPane.columnIndex="1">
                            <children>
                               <TextField fx:id="name" prefHeight="22.0" prefWidth="333.0" promptText="First Name">
                                  <VBox.margin>
@@ -50,12 +50,7 @@
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </VBox.margin>
                               </TextArea>
-                              <ComboBox fx:id="directorCombo" editable="true" prefHeight="26.0" prefWidth="233.0" promptText="Search &amp; Select Director" GridPane.rowIndex="3">
-                                 <VBox.margin>
-                                    <Insets bottom="5.0" left="5.0" right="5.0" />
-                                 </VBox.margin>
-                              </ComboBox>
-                              <DatePicker fx:id="date" prefHeight="26.0" prefWidth="181.0" promptText="MM/DD/YYYY" GridPane.rowIndex="2">
+                              <DatePicker fx:id="date" prefHeight="26.0" prefWidth="147.0" promptText="MM/DD/YYYY" GridPane.rowIndex="2">
                                  <HBox.margin>
                                     <Insets />
                                  </HBox.margin>
@@ -63,7 +58,7 @@
                                     <Insets bottom="5.0" left="5.0" right="5.0" />
                                  </VBox.margin>
                               </DatePicker>
-                              <ChoiceBox fx:id="genereBox" prefHeight="26.0" prefWidth="118.0">
+                              <ChoiceBox fx:id="genereBox" prefHeight="26.0" prefWidth="146.0">
                                  <VBox.margin>
                                     <Insets bottom="5.0" left="5.0" right="5.0" />
                                  </VBox.margin>
@@ -72,9 +67,29 @@
                         </VBox>
                      </children>
                   </HBox>
+                  <HBox>
+                     <children>
+                        <Label prefHeight="25.0" prefWidth="47.0" text="Director">
+                           <opaqueInsets>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </opaqueInsets>
+                           <HBox.margin>
+                              <Insets right="5.0" />
+                           </HBox.margin>
+                        </Label>
+                        <ComboBox fx:id="directorCombo" editable="true" prefHeight="26.0" prefWidth="249.0" promptText="Search &amp; Select Director">
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </ComboBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets left="5.0" top="5.0" />
+                     </VBox.margin>
+                  </HBox>
                   <HBox layoutX="5.0" layoutY="308.0" GridPane.rowIndex="2">
                      <children>
-                        <Label prefHeight="25.0" prefWidth="47.0" text="Actors" GridPane.columnIndex="1">
+                        <Label prefHeight="25.0" prefWidth="47.0" text="Cast" GridPane.columnIndex="1">
                            <opaqueInsets>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </opaqueInsets>
