--- a/src/dmdb/Controllers/NewPerson.fxml
+++ b/src/dmdb/Controllers/NewPerson.fxml
@@ -8,77 +8,11 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dmdb.Controllers.NewPersonController">
+<AnchorPane prefHeight="618.0" prefWidth="643.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dmdb.Controllers.NewPersonController">
    <children>
-      <GridPane layoutY="4.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="605.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints maxHeight="250.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="306.0" minHeight="10.0" prefHeight="275.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="205.0" minHeight="0.0" prefHeight="52.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="308.0" minHeight="10.0" prefHeight="207.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-         <children>
-            <GridPane GridPane.rowIndex="1">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="267.0" minWidth="10.0" prefWidth="242.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="465.0" minWidth="10.0" prefWidth="334.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="412.0" minWidth="10.0" prefWidth="31.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <AnchorPane prefHeight="173.0" prefWidth="229.0">
-                     <children>
-                        <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="248.0" layoutX="9.0" layoutY="11.0" stroke="BLACK" strokeType="INSIDE" width="218.0" />
-                        <Label layoutX="65.0" layoutY="79.0" text="Drop the photo" />
-                     </children>
-                  </AnchorPane>
-                  <GridPane prefHeight="218.0" prefWidth="285.0" GridPane.columnIndex="1">
-                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-                     </columnConstraints>
-                     <rowConstraints>
-                        <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="28.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="191.0" minHeight="10.0" prefHeight="169.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="43.0" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
-                     </rowConstraints>
-                     <children>
-                        <TextField fx:id="firstName" prefHeight="22.0" prefWidth="333.0" promptText="First Name" />
-                        <TextField fx:id="lastName" promptText="Last Name" GridPane.rowIndex="1" />
-                        <DatePicker fx:id="date" prefHeight="26.0" prefWidth="238.0" promptText="MM/DD/YYYY" GridPane.rowIndex="3" />
-                        <TextArea fx:id="biography" prefHeight="115.0" prefWidth="348.0" promptText="Breif Description" GridPane.rowIndex="2" />
-                     </children>
-                  </GridPane>
-               </children>
-            </GridPane>
-            <ListView prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="3" />
-            <GridPane GridPane.rowIndex="2">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="10.0" prefWidth="16.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="10.0" prefWidth="59.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="371.0" minWidth="10.0" prefWidth="265.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="217.0" minWidth="10.0" prefWidth="217.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.0" minWidth="10.0" prefWidth="67.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Button mnemonicParsing="false" onAction="#delete" prefHeight="26.0" prefWidth="66.0" text="Delete" GridPane.columnIndex="4" />
-                  <Label prefHeight="25.0" prefWidth="57.0" text="Movies" GridPane.columnIndex="1">
-                     <opaqueInsets>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </opaqueInsets>
-                  </Label>
-                  <TextField prefHeight="26.0" prefWidth="298.0" promptText="Add more movies where he participated." GridPane.columnIndex="2" />
-               </children>
-            </GridPane>
-            <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="52.0" prefWidth="605.0">
+      <BorderPane prefHeight="546.0" prefWidth="562.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <top>
+            <ToolBar nodeOrientation="RIGHT_TO_LEFT" prefHeight="52.0" prefWidth="605.0" BorderPane.alignment="CENTER">
               <items>
                   <Button mnemonicParsing="false" onAction="#save" prefHeight="26.0" prefWidth="56.0" text="Save" />
                 <Button mnemonicParsing="false" onAction="#cancel" prefHeight="26.0" prefWidth="72.0" text="Cancel" GridPane.columnIndex="1" />
@@ -89,7 +23,86 @@
                   </Label>
               </items>
             </ToolBar>
-         </children>
-      </GridPane>
+         </top>
+         <center>
+            <VBox BorderPane.alignment="CENTER">
+               <children>
+                  <HBox>
+                     <children>
+                        <AnchorPane prefHeight="248.0" prefWidth="249.0">
+                           <children>
+                              <Label layoutX="65.0" layoutY="79.0" text="Drop the photo" />
+                              <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="248.0" layoutX="28.0" layoutY="24.0" stroke="BLACK" strokeType="INSIDE" width="249.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                           </children>
+                           <HBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </HBox.margin>
+                        </AnchorPane>
+                        <VBox prefHeight="268.0" prefWidth="355.0" GridPane.columnIndex="1">
+                           <children>
+                              <TextField fx:id="firstName" prefHeight="26.0" prefWidth="255.0" promptText="First Name" VBox.vgrow="NEVER">
+                                 <VBox.margin>
+                                    <Insets top="10.0" />
+                                 </VBox.margin>
+                              </TextField>
+                              <TextField fx:id="lastName" prefHeight="26.0" prefWidth="280.0" promptText="Last Name" GridPane.rowIndex="1" VBox.vgrow="NEVER">
+                                 <VBox.margin>
+                                    <Insets top="10.0" />
+                                 </VBox.margin>
+                              </TextField>
+                              <TextArea fx:id="biography" prefHeight="115.0" prefWidth="396.0" promptText="Breif Description" GridPane.rowIndex="2">
+                                 <VBox.margin>
+                                    <Insets top="10.0" />
+                                 </VBox.margin>
+                              </TextArea>
+                              <DatePicker fx:id="date" prefHeight="26.0" prefWidth="238.0" promptText="MM/DD/YYYY" GridPane.rowIndex="3">
+                                 <VBox.margin>
+                                    <Insets top="10.0" />
+                                 </VBox.margin>
+                              </DatePicker>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox layoutX="10.0" layoutY="337.0" GridPane.rowIndex="2">
+                     <children>
+                        <Label prefHeight="25.0" prefWidth="57.0" text="Movies" GridPane.columnIndex="1">
+                           <opaqueInsets>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </opaqueInsets>
+                        </Label>
+                        <ComboBox fx:id="titlesComboBox" editable="true" onAction="#selectComboItem" onKeyReleased="#updateComboList" prefHeight="26.0" prefWidth="189.0" promptText="Add more movies" />
+                        <Button mnemonicParsing="false" onAction="#delete" prefHeight="26.0" prefWidth="66.0" text="Delete" GridPane.columnIndex="4">
+                           <HBox.margin>
+                              <Insets left="10.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                     <VBox.margin>
+                        <Insets left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
+                  </HBox>
+                  <TableView fx:id="titlesTable" prefHeight="242.0" prefWidth="673.0">
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                     <columns>
+                        <TableColumn prefWidth="75.0" text="Image" />
+                        <TableColumn fx:id="t_nameCol" prefWidth="172.0" text="Title" />
+                        <TableColumn fx:id="t_genereCol" prefWidth="112.0" text="Genere" />
+                        <TableColumn fx:id="t_relDateCol" prefWidth="122.0" text="Released Date" />
+                        <TableColumn fx:id="t_summaryCol" prefWidth="125.0" text="Summary" />
+                     </columns>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </TableView>
+               </children>
+            </VBox>
+         </center>
+      </BorderPane>
    </children>
 </AnchorPane>
