--- a/src/dmdb/Controllers/NewTitle.fxml
+++ b/src/dmdb/Controllers/NewTitle.fxml
@@ -66,6 +66,9 @@
                            </children>
                         </VBox>
                      </children>
+                     <VBox.margin>
+                        <Insets left="10.0" right="10.0" top="10.0" />
+                     </VBox.margin>
                   </HBox>
                   <HBox>
                      <children>
